# ContextLayer.dev

./: .gitignore  CLAUDE.md  LICENSE  README.md  USER-MANUAL.md  contextlayer-free-guide.md  pyproject.toml
demo-data/: README.md  build_acme.py
docs/: demo-script.md  slide-deck.md
docs/demo/: demo.cast
docs/specs/: 2026-05-18-contextlayer-design.md
landing/: demo-data.json  index.html  vercel.json
src/contextlayer/: __init__.py  __main__.py  cache.py  claude_md.py  cli.py  drift.py  embed.py  explain.py  health.py  models.py  retrieval.py  tier.py  validate_local.py
src/contextlayer/extract/: __init__.py  atom.py  llm_client.py  pipeline.py  stage1_haiku.py  stage2_sonnet.py  stage3_opus.py
src/contextlayer/ingest/: __init__.py  __main__.py  code_scan.py  gh_prs.py  git_log.py
src/contextlayer/mcp_server/: __init__.py  server.py
src/contextlayer/store/: __init__.py  repo_hash.py  sqlite.py
src/contextlayer/templates/: explain.md.j2
tasks/: handoff.md  hype-relaunch-plan.md  keyless-tier-plan.md  lessons.md  todo.md
tests/: test_health_drift_claudemd.py  test_llm_client.py  test_tier_router.py  test_validate_local.py
tests/smoke/: README.md  test_mcp_server.py  test_retrieval.py
